Migrate to Hugo

--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{{.Doc.title}}</title>
-  <meta name="description" content="{{.Doc.description}}">
-  <meta name="author" content="{{.Doc.author}}">
+  <title>{{.Title}}</title>
+  <meta name="description" content="{{.Description}}">
+  <meta name="author" content="{{.Author}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/skeleton.min.css">
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="row">
       <div class="column">
-        {{- .Doc.body -}}
+        {{- .Content -}}
       </div>
     </div>
   </div>
