--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -7,7 +7,7 @@
   <meta name="author" content="{{.Author}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/skeleton.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="icon" type="image/png" href="/favicon.ico">
   <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
