--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -25,3 +25,7 @@ blockquote, dl, figure, form, ol, p, pre, table, ul {
 .button, button, li {
   margin-bottom: 0.5rem;
 }
+
+ol ol, ol ul, ul ol, ul ul {
+  margin: 0.5rem 0 0.5rem 3rem;
+}
