--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -23,6 +23,9 @@
   <div class="container">
     <div class="row">
       <div class="column">
+        {{- if len .File.Dir | ne 0 -}}
+        <div class="up-link"><a href="..">Up</a></div>
+        {{- end -}}
         {{- .Content -}}
       </div>
     </div>
