Add TOC to each page, add metadata
Fix serve.sh, I had forgot to update it in 4bb5b2a06e4f2.

--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -26,6 +26,11 @@
         {{- if len .File.Dir | ne 0 -}}
         <div class="up-link"><a href="..">Up</a></div>
         {{- end -}}
+        <div id="top" class="top">
+          <h1>{{ .Title }}</h1>
+          <div>{{ .Description }}</div>
+        </div>
+        <div id="toc">{{ .TableOfContents }}</div>
         {{- .Content -}}
       </div>
     </div>
