--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -4,20 +4,32 @@
   <meta charset="utf-8">
   <title>{{.Title}}</title>
   <meta name="description" content="{{.Description}}">
-  <meta name="author" content="{{.Author}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="icon" type="image/png" href="/favicon.ico">
   <script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-93006956-1', 'auto');
-		ga('send', 'pageview');
-	</script>
+    ga('create', 'UA-93006956-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="{{ .Title }}" />
+  <meta property="og:description" content="{{ .Description }}" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@maruel" />
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org/",
+    "@type": "CreativeWork",
+    "name": "{{ .Title }}",
+    "description": "{{ .Description }}"
+  }
+  </script>
 </head>
 <body>
   <div class="container">
