--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -20,6 +20,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:description" content="{{ .Description }}" />
+  <meta property="og:url" content="{{ .Permalink }}" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:creator" content="@maruel" />
   <script type="application/ld+json">
