--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -21,7 +21,7 @@
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:description" content="{{ .Description }}" />
   <meta property="og:url" content="{{ .Permalink }}" />
-  <meta property="og:image" content="//periph-logo.png" />
+  <meta property="og:image" content="{{ .Site.BaseURL }}periph-logo.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:creator" content="@maruel" />
   <script type="application/ld+json">
