Lots of improvements!
- Add more graphics
- Fix gopkg.tpl
- Fix URLs
- Add contact information
- Disable generating index.xml, it is not useful

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -44,6 +44,12 @@ ol ol, ol ul, ul ol, ul ul {
   float: right;
 }
 
+img[alt=boardimage] {
+  float: right;
+  max-width: 100%;
+  margin-bottom: 2em;
+}
+
 code .hll { background-color: #ffffcc }
 code  { background: #f7f7f7; }
 code .c { color: #888888 } /* Comment */
