--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,43 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>{{.Title}}</title>
-  <meta name="description" content="{{.Description}}">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="icon" type="image/png" href="/favicon.ico">
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-93006956-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="{{ .Title }}" />
-  <meta property="og:description" content="{{ .Description }}" />
-  <meta property="og:url" content="{{ .Permalink }}" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/periph/website/master/site/static/img/periph-logo.png" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:creator" content="@maruel" />
-  <script type="application/ld+json">
-  {
-    "@context": "http://schema.org/",
-    "@type": "CreativeWork",
-    "name": "{{ .Title }}",
-    "description": "{{ .Description }}"
-  }
-  </script>
+  {{ partial "head.html" . }}
 </head>
 <body>
+  <header>
   <div class="container">
     <div class="row">
       <div class="column">
-        <div class="up-link">
+        <div class="u-pull-right">
           <a href="https://groups.google.com/forum/#!forum/periph-users">Discussion</a>
           —
           <a href="https://gophers.slack.com/messages/periph/">
@@ -48,14 +19,21 @@
           <a href="..">Up</a>
         {{- end -}}
         </div>
-        <div id="top" class="top">
-          <h1>{{ .Title }}</h1>
-          <div>{{ .Description }}</div>
-        </div>
-        <div id="toc">{{ .TableOfContents }}</div>
+        <h1>{{ .Title }}</h1>
+        <div>{{ .Description }}</div>
+      </div>
+    </div>
+  </div>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        {{/* Will add later on the right <div id="toc">{{ .TableOfContents
+          }}</div> */}}
         {{- .Content -}}
       </div>
     </div>
   </div>
+  {{ partial "footer.html" . }}
 </body>
 </html>
