--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -8,7 +8,11 @@
     </div>
     <div class="one-half column">
       &copy; 2017 <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
-      This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+      Web site licensed under <a rel="license"
+        href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
+        Attribution 4.0 International License</a>.<br>
+      Mascotte created by Mérédith Ruel, inspired from original work by Renée
+      French.
     </div>
   </div>
 </div>
