--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       Web site licensed under <a rel="license"
         href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
         Attribution 4.0 International License</a>.<br>
-      Mascotte created by Mérédith Ruel, inspired from original work by Renée
+      Mascot created by Mérédith Ruel, inspired from original work by Renée
       French.
     </div>
   </div>
