--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,20 +1,19 @@
 <header>
 <div class="container">
   <div class="row">
-    <div class="column">
-      <div class="u-pull-right">
-        <a href="https://groups.google.com/forum/#!forum/periph-users">Discussion</a>
-        —
-        <a href="https://gophers.slack.com/messages/periph/">
-          <img src="https://raw.githubusercontent.com/periph/website/master/site/static/img/slack.png" width=24 height=24></a>
-        <a href="https://invite.slack.golangbridge.org/">get invite</a>
-      {{ if len .File.Dir | ne 0 }}
-        —
-        <a href="..">Up</a>
-      {{- end -}}
-      </div>
-      <h1>{{ .Title }}</h1>
+    <div class="eight columns">
+      <a href="/"><h1>{{ .Title }}</h1></a>
       <div>{{ .Description }}</div>
+    </div>
+    <div class="four columns top-right">
+      <a href="https://groups.google.com/forum/#!forum/periph-users">Mailing list</a>
+      <br>
+      <a href="https://gophers.slack.com/messages/periph/">
+        <img src="https://raw.githubusercontent.com/periph/website/master/site/static/img/slack.png" width=16 height=16>Slack</a>
+        —
+      <a href="https://invite.slack.golangbridge.org/">Get invite</a>
+      <br>
+      <iframe src="https://ghbtns.com/github-btn.html?user=google&repo=periph&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
     </div>
   </div>
 </div>
