Add basic nav bar that is only visible on wide viewport.
It is currently hidden on mobile, as an hotdog menu has to be implemented.

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -18,3 +18,19 @@
   </div>
 </div>
 </header>
+
+<div class="navbar-spacer"></div>
+<div class="container">
+  <nav class="navbar">
+    <div class="container">
+      <ul class="navbar-list">
+        <li class="navbar-item"><a class="navbar-link" href="/platform/">Platforms</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="/device/">Devices</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="/library/">Library</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="/examples/">Examples</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="/tools/">Tools</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="/project/">Project</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
