Apply min-height:100% to body, so footer is at the bottom.
Did so without hardcoding footer height, nor position: absolute. Testing on latest of Firefox, Safari, Chrome. I win.

--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -87,6 +87,20 @@ code .il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
  * Custom styles
  */
 
+html, body {
+  height: 100%;
+}
+
+.whole-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+
+.content-container {
+  flex: 1;
+}
+
 body {
   font-size: 1.75em;
 }
