--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -4,16 +4,22 @@
   {{ partial "head.html" . }}
 </head>
 <body>
-  {{ partial "header.html" . }}
-  <div class="container">
-    <div class="row">
-      <div class="column">
-        {{/* Will add later on the right <div id="toc">{{ .TableOfContents
-          }}</div> */}}
-        {{- .Content -}}
+  <div class="whole-container">
+    <div class="content-container">
+      {{ partial "header.html" . }}
+      <div class="container">
+        <div class="row">
+          <div class="column">
+            {{/* Will add later on the right <div id="toc">{{ .TableOfContents
+              }}</div> */}}
+            {{- .Content -}}
+          </div>
+        </div>
       </div>
     </div>
+    <div class="footer-container">
+      {{ partial "footer.html" . }}
+    </div>
   </div>
-  {{ partial "footer.html" . }}
 </body>
 </html>
