--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -5,15 +5,6 @@
 <link href="//fonts.googleapis.com/css?family=Raleway:300,400,600,700,900" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="icon" type="image/png" href="/favicon.ico">
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-93006956-1', 'auto');
-  ga('send', 'pageview');
-</script>
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:description" content="{{ .Description }}" />
@@ -30,3 +21,4 @@
 }
 </script>
 <script async defer src="/js/script.js"></script>
+<script src="/js/ga.js"></script>
