--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -118,9 +118,15 @@ ol ol, ol ul, ul ol, ul ul {
 }
 
 img[alt=boardimage] {
-  float: right;
-  margin-bottom: 2em;
-  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 750px) {
+  img[alt=boardimage] {
+    float: right;
+  }
 }
 
 footer, header {
