Enable navbar on mobile by making it very small
It's still much better than an hotdog menu, which I really dislike. The current
sizing is hardcoded based on the current content of
site/layouts/partial/headers.html.

Add Contributing under Project, I had forgot about it!

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -48,6 +48,7 @@
               {{ partial "popup-item.html" (dict "c" . "h" "/project/" "n" "Overview") }}
               {{ partial "popup-item.html" (dict "c" . "h" "/project/goals/" "n" "Goals") }}
               {{ partial "popup-item.html" (dict "c" . "h" "/project/design/" "n" "Design") }}
+              {{ partial "popup-item.html" (dict "c" . "h" "/project/contributing/" "n" "Contributing") }}
             </ul>
           </div>
         </li>
