--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -161,148 +161,155 @@ header a {
 
 /* NAVBAR */
 
-.navbar {
-  display: none;
-}
-
-.navbar-spacer {
-  margin-bottom: 10px;
-}
-
 .currentLink {
   font-weight: 900 !important;
 }
 
-/* TODO: Implement phone hotdog menu or vertical menu. */
-
-/* For wide viewport, use complete enumeration as an horizontal bar */
-@media (min-width: 750px) {
-  .navbar, .navbar-spacer {
-    background: #fff;
-    border-bottom: 1px solid #eee;
-    border-top: 1px solid #eee;
-    margin-bottom: 10px;
-    display: block;
-    height: 5rem;
-    width: 100%;
-    z-index: 99;
-  }
-  .navbar-spacer {
-    display: none;
-  }
-  .navbar > .container {
-    width: 100%;
-  }
-  .navbar-list {
-    list-style: none;
-    margin-bottom: 0;
-  }
-  .navbar-item {
-    float: left;
-    margin-bottom: 0;
-    position: relative;
-  }
+.navbar, .navbar-spacer {
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+  margin-bottom: 10px;
+  display: block;
+  width: 100%;
+  z-index: 99;
+}
+.navbar-spacer {
+  display: none;
+}
+.navbar > .container {
+  width: 100%;
+}
+.navbar-list {
+  list-style: none;
+  margin-bottom: 0;
+}
+.navbar-item {
+  float: left;
+  margin-bottom: 0;
+  position: relative;
+}
+.navbar-link {
+  color: #222;
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: .2rem;
+  line-height: 5rem;
+  margin-right: 35px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+/* Densify links on smaller screen */
+@media (max-width: 799px) {
   .navbar-link {
-    color: #222;
-    font-size: 11px;
-    font-weight: 600;
-    letter-spacing: .2rem;
-    line-height: 5rem;
-    margin-right: 35px;
-    text-decoration: none;
-    text-transform: uppercase;
+    letter-spacing: 0rem;
+    margin-right: 25px;
+    line-height: 4rem;
   }
-  .navbar-link.active {
-    color: #33C3F0;
+}
+@media (max-width: 599px) {
+  .navbar-link {
+    margin-right: 15px;
   }
-  .has-docked-nav .navbar {
-    left: 0;
-    position: fixed;
-    top: 0;
+}
+@media (max-width: 499px) {
+  .navbar-link {
+    font-size: 9px;
   }
-  .has-docked-nav .navbar-spacer {
-    display: block;
+}
+@media (max-width: 449px) {
+  .navbar-link {
+    font-size: 8px;
   }
-  .has-docked-nav .navbar > .container {
-    width: 80%;
-  }
+}
+.navbar-link.active {
+  color: #33C3F0;
+}
+.has-docked-nav .navbar {
+  left: 0;
+  position: fixed;
+  top: 0;
+}
+.has-docked-nav .navbar-spacer {
+  display: block;
+}
+.has-docked-nav .navbar > .container {
+  width: 80%;
+}
 
-  /* Submenus */
-  .popover.open {
-    display: block;
-  }
-  .popover {
-    background: #fff;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    display: none;
-    left: -50%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    top: 92%;
-    white-space: nowrap;
-    z-index: 99;
-    -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-    -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-    filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-  }
-  .popover-item:first-child .popover-link:after, .popover-item:first-child .popover-link:before {
-    border: solid transparent;
-    bottom: 100%;
-    content: " ";
-    height: 0;
-    left: 50%;
-    pointer-events: none;
-    position: absolute;
-    width: 0;
-  }
-  .popover-item:first-child .popover-link:after {
-    border-color: rgba(255, 255, 255, 0);
-    border-bottom-color: #fff;
-    border-width: 10px;
-    margin-left: -10px;
-  }
-  .popover-item:first-child .popover-link:before {
-    border-color: rgba(238, 238, 238, 0);
-    border-bottom-color: #eee;
-    border-width: 11px;
-    margin-left: -11px;
-  }
-  .popover-list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-  }
-  .popover-item {
-    padding: 0;
-    margin: 0;
-  }
-  .popover-link {
-    border-bottom: 1px solid #eee;
-    color: #222;
-    display: block;
-    font-size: 1.0rem;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    padding: 8px 20px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-  .popover-item:first-child .popover-link {
-    border-radius: 4px 4px 0 0;
-  }
-  .popover-item:last-child .popover-link {
-    border-radius: 0 0 4px 4px;
-    border-bottom-width: 0;
-  }
-  .popover-link:hover {
-    color: #fff;
-    background: #33C3F0;
-  }
-  .popover-link:hover, .popover-item:first-child .popover-link:hover:after {
-    border-bottom-color: #33C3F0;
-  }
+/* Submenus */
+.popover.open {
+  display: block;
+}
+.popover {
+  background: #fff;
+  border-radius: 4px;
+  border: 1px solid #eee;
+  display: none;
+  left: -25px;
+  position: absolute;
+  top: 92%;
+  white-space: nowrap;
+  z-index: 99;
+  -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
+  -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
+  filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
+}
+.popover-item:first-child .popover-link:after, .popover-item:first-child .popover-link:before {
+  border: solid transparent;
+  bottom: 100%;
+  content: " ";
+  height: 0;
+  left: 50%;
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+}
+.popover-item:first-child .popover-link:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: #fff;
+  border-width: 10px;
+  margin-left: -10px;
+}
+.popover-item:first-child .popover-link:before {
+  border-color: rgba(238, 238, 238, 0);
+  border-bottom-color: #eee;
+  border-width: 11px;
+  margin-left: -11px;
+}
+.popover-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.popover-item {
+  padding: 0;
+  margin: 0;
+}
+.popover-link {
+  border-bottom: 1px solid #eee;
+  color: #222;
+  display: block;
+  font-size: 1.0rem;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  padding: 8px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.popover-item:first-child .popover-link {
+  border-radius: 4px 4px 0 0;
+}
+.popover-item:last-child .popover-link {
+  border-radius: 0 0 4px 4px;
+  border-bottom-width: 0;
+}
+.popover-link:hover {
+  color: #fff;
+  background: #33C3F0;
+}
+.popover-link:hover, .popover-item:first-child .popover-link:hover:after {
+  border-bottom-color: #33C3F0;
 }
