Add ▼ to indicate submenu
I plan to redo the menus a bit later so this is a stopgap.

--- a/site/layouts/partials/popover-root.html
+++ b/site/layouts/partials/popover-root.html
@@ -1,1 +1,1 @@
-<a class="navbar-link{{ if hasPrefix .c.RelPermalink .h }} currentLink{{ end }}" href="{{ .h }}">{{ .n }}</a>
+<a class="navbar-link{{ if hasPrefix .c.RelPermalink .h }} currentLink{{ end }}" href="{{ .h }}">{{ .n }}▼</a>
