--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -174,6 +174,24 @@ header a {
 }
 
 
+/* Youtube */
+.youtube {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  position: relative;
+  width: 100%;
+}
+
+.youtube iframe {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 /* NAVBAR */
 
 .currentLink {
