Redo platform section
Remove the dropdown, this is to encourage users to browse more

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -29,19 +29,7 @@
   <nav class="navbar">
     <div class="container">
       <ul class="navbar-list">
-        <li class="navbar-item">
-          {{ partial "popover-root.html" (dict "c" . "h" "/platform/" "n" "Platforms") }}
-          <div class="popover">
-            <ul class="popover-list">
-              {{ partial "popup-item.html" (dict "c" . "h" "/platform/" "n" "Overview") }}
-              {{/* TODO(maruel): Generate the rest of the list automatically. */}}
-              {{ partial "popup-item.html" (dict "c" . "h" "/platform/beaglebone/" "n" "Beaglebone") }}
-              {{ partial "popup-item.html" (dict "c" . "h" "/platform/chip/" "n" "C.H.I.P.") }}
-              {{ partial "popup-item.html" (dict "c" . "h" "/platform/odroid-c1/" "n" "ODROID-C1") }}
-              {{ partial "popup-item.html" (dict "c" . "h" "/platform/raspberrypi/" "n" "Raspberry Pi") }}
-            </ul>
-          </div>
-        </li>
+        {{ partial "navbar-item.html" (dict "c" . "h" "/platform/" "n" "Platforms") }}
         {{ partial "navbar-item.html" (dict "c" . "h" "/device/" "n" "Devices") }}
         {{ partial "navbar-item.html" (dict "c" . "h" "/library/" "n" "Library") }}
         {{ partial "navbar-item.html" (dict "c" . "h" "/examples/" "n" "Examples") }}
