--- a/site/layouts/partials/navbar-item.html
+++ b/site/layouts/partials/navbar-item.html
@@ -1,1 +1,1 @@
-<li class="navbar-item"><a class="navbar-link{{ if eq .c.RelPermalink .h }} currentLink{{ end }}" href="{{ .h }}">{{ .n }}</a></li>
+<li class="navbar-item"><a class="navbar-link{{ if hasPrefix .c.RelPermalink .h }} currentLink{{ end }}" href="{{ .h }}">{{ .n }}</a></li>
