--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -10,7 +10,7 @@
 <meta property="og:description" content="{{ .Description }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:image" content="https://raw.githubusercontent.com/periph/website/master/site/static/img/periph-mascot-fb.png" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@maruel" />
 <script type="application/ld+json">
 {
