--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,10 +1,9 @@
 <meta charset="utf-8">
 <title>{{.Title}}</title>
+<script async src="/js/ga.js"></script>
+<script async defer src="/js/script.js"></script>
 <meta name="description" content="{{.Description}}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="//fonts.googleapis.com/css?family=Raleway:300,400,600,700,900" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="/css/style.css">
-<link rel="icon" type="image/png" href="/favicon.ico">
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:description" content="{{ .Description }}" />
@@ -20,5 +19,5 @@
   "description": "{{ .Description }}"
 }
 </script>
-<script async defer src="/js/script.js"></script>
-<script src="/js/ga.js"></script>
+<link rel="icon" type="image/png" href="/favicon.ico">
+<link rel="stylesheet" href="/css/style.css">
