Stop hotlinking from raw.githubusercontent.com
The web site went on HN and reddit now so there won't be any new high load and
in practice, the f1-micro server handles the load just fine.

This will likely help the web site performance a bit.

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -8,7 +8,7 @@
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:description" content="{{ .Description }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="https://raw.githubusercontent.com/periph/website/master/site/static/img/periph-mascot-fb.png" />
+<meta property="og:image" content="/img/periph-mascot-fb.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@maruel" />
 <script type="application/ld+json">
