--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="one-half column">
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
           alt="Creative Commons License" class="cc40"
-          src="https://raw.githubusercontent.com/periph/website/master/site/static/img/cc4.0-80x15.png" /></a>
+          src="/img/cc4.0-80x15.png" /></a>
       </div>
       <div class="one-half column">
         &copy; 2017 <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
