--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -10,13 +10,13 @@
       <br>
       <!--
       <a href="https://gophers.slack.com/messages/periph/">
-        <img src="https://raw.githubusercontent.com/periph/website/master/site/static/img/slack.png" width=16 height=16>Slack</a>
+        <img src="/img/slack.png" width=16 height=16>Slack</a>
         —
       <a href="https://invite.slack.golangbridge.org/">Get invite</a>
       <br>
       -->
       <a href="https://gitter.im/periph-io/Lobby"><img
-         src="https://raw.githubusercontent.com/periph/website/master/site/static/img/gitter.png" alt="chat on gitter"></a>
+         src="/img/gitter.png" alt="chat on gitter"></a>
       <br>
       <iframe src="https://ghbtns.com/github-btn.html?user=google&repo=periph&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
     </div>
