--- a/site/layouts/partials/style.html
+++ b/site/layouts/partials/style.html
@@ -1,3 +1,4 @@
+<style>
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -353,3 +354,4 @@ header a {
 .popover-link:hover, .popover-item:first-child .popover-link:hover:after {
   border-bottom-color: #33C3F0;
 }
+</style>
