--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -19,5 +19,19 @@
   "description": "{{ .Description }}"
 }
 </script>
+
+{{/* For non-Retina (@1× display) iPhone, iPod Touch, and Android 2.1+: 57x57 */}}
+<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+{{/* For the iPad mini and the first- and second-generation iPad (@1× display) */}}
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/apple-touch-icon-76x76-precomposed.png">
+{{/* For iPhone with @2× display */}}
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png">
+{{/* For iPad with @2× display */}}
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png">
+{{/* For iPhone 6 Plus with @3× */}}
+<link rel="apple-touch-icon-precomposed" sizes="180x180" href="/apple-touch-icon-180x180-precomposed.png">
+{{/* For Chrome for Android: */}}
+<link rel="icon" sizes="192x192" href="/touch-icon-192x192.png">
 <link rel="icon" type="image/png" href="/favicon.ico">
+
 {{ partial "style.html" . }}
