--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {{ partial "head.html" . }}
+  {{ partial "html_head.html" . }}
 </head>
 <body>
   <div class="whole-container">
     <div class="content-container">
-      {{ partial "header.html" . }}
+      {{ partial "body_head.html" . }}
       <div class="container">
         <div class="row">
           <div class="column">
