--- a/site/static/templates/gopkg.html
+++ b/site/static/templates/gopkg.html
@@ -1,4 +1,7 @@
-{{/* Implement redirection for periph.io/x/... URLs */}}
+{{/*
+  Implement redirection for periph.io/x/... URLs.
+  This file is processed by Caddy, not Hugo!
+*/}
 {{- $path := .URL.Query.Get "path" -}}
 {{- if len $path | ne 0 -}}
   {{- $repoName := index (.Split $path "/") 2 -}}
@@ -14,7 +17,9 @@
   <noscript>
     <meta name="destination" http-equiv="refresh" content="0; URL='https://godoc.org/periph.io{{$path}}'" />
   </noscript>
-  {{/* Doesn't work: {{ partial "ga.html" . }} */}}
+  {{/*
+    Keep in sync with ../../layout/partials/html_head_ga.html.
+  */}}
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
