Refactor CSS to be more maintainable
- Since the generated site is already minified, there's no point in embedding
  pre-minified third party CSS. Migrate all CSS into separate files.
- Increase margin at bottom of <hr> for list page.

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         {{ range .Data.Pages.ByWeight }}
-        <hr>
+        <hr class="margin-below">
         <div class="row">
           <div class="column">
             <h1 id="{{ .TranslationBaseName }}" class="center_title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
