--- a/site/layouts/partials/html_head_style.html
+++ b/site/layouts/partials/html_head_style.html
@@ -1,357 +1,6 @@
 <style>
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
-img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px
-dotted}b,optgroup,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre,textarea{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}table{border-collapse:collapse;border-spacing:0}
-
-.column,.columns,.container,.u-full-width{width:100%;box-sizing:border-box}h1,h2,h3{letter-spacing:-.1rem}body,h6{line-height:1.6}.container{position:relative;max-width:960px;margin:0 auto;padding:0 20px}ol,p,ul{margin-top:0}.column,.columns{float:left}@media (min-width:400px){.container{width:85%;padding:0}}html{font-size:62.5%}body{font-size:1.5em;font-weight:400;font-family:Raleway,HelveticaNeue,"Helvetica Neue",Helvetica,Arial,sans-serif;color:#222}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:2rem;font-weight:300}h1{font-size:4rem;line-height:1.2}h2{font-size:3.6rem;line-height:1.25}h3{font-size:3rem;line-height:1.3}h4{font-size:2.4rem;line-height:1.35;letter-spacing:-.08rem}h5{font-size:1.8rem;line-height:1.5;letter-spacing:-.05rem}h6{font-size:1.5rem;letter-spacing:0}@media (min-width:550px){.container{width:80%}.column,.columns{margin-left:4%}.column:first-child,.columns:first-child{margin-left:0}.one.column,.one.columns{width:4.66666666667%}.two.columns{width:13.3333333333%}.three.columns{width:22%}.four.columns{width:30.6666666667%}.five.columns{width:39.3333333333%}.six.columns{width:48%}.seven.columns{width:56.6666666667%}.eight.columns{width:65.3333333333%}.nine.columns{width:74%}.ten.columns{width:82.6666666667%}.eleven.columns{width:91.3333333333%}.twelve.columns{width:100%;margin-left:0}.one-third.column{width:30.6666666667%}.two-thirds.column{width:65.3333333333%}.one-half.column{width:48%}.offset-by-one.column,.offset-by-one.columns{margin-left:8.66666666667%}.offset-by-two.column,.offset-by-two.columns{margin-left:17.3333333333%}.offset-by-three.column,.offset-by-three.columns{margin-left:26%}.offset-by-four.column,.offset-by-four.columns{margin-left:34.6666666667%}.offset-by-five.column,.offset-by-five.columns{margin-left:43.3333333333%}.offset-by-six.column,.offset-by-six.columns{margin-left:52%}.offset-by-seven.column,.offset-by-seven.columns{margin-left:60.6666666667%}.offset-by-eight.column,.offset-by-eight.columns{margin-left:69.3333333333%}.offset-by-nine.column,.offset-by-nine.columns{margin-left:78%}.offset-by-ten.column,.offset-by-ten.columns{margin-left:86.6666666667%}.offset-by-eleven.column,.offset-by-eleven.columns{margin-left:95.3333333333%}.offset-by-one-third.column,.offset-by-one-third.columns{margin-left:34.6666666667%}.offset-by-two-thirds.column,.offset-by-two-thirds.columns{margin-left:69.3333333333%}.offset-by-one-half.column,.offset-by-one-half.columns{margin-left:52%}h1{font-size:5rem}h2{font-size:4.2rem}h3{font-size:3.6rem}h4{font-size:3rem}h5{font-size:2.4rem}h6{font-size:1.5rem}}a{color:#1EAEDB}a:hover{color:#0FA0CE}.button,button,input[type=submit],input[type=reset],input[type=button]{display:inline-block;height:38px;padding:0 30px;color:#555;text-align:center;font-size:11px;font-weight:600;line-height:38px;letter-spacing:.1rem;text-transform:uppercase;text-decoration:none;white-space:nowrap;background-color:transparent;border-radius:4px;border:1px solid #bbb;cursor:pointer;box-sizing:border-box}.button:focus,.button:hover,button:focus,button:hover,input[type=submit]:focus,input[type=submit]:hover,input[type=reset]:focus,input[type=reset]:hover,input[type=button]:focus,input[type=button]:hover{color:#333;border-color:#888;outline:0}.button.button-primary,button.button-primary,input[type=submit].button-primary,input[type=reset].button-primary,input[type=button].button-primary{color:#FFF;background-color:#33C3F0;border-color:#33C3F0}.button.button-primary:focus,.button.button-primary:hover,button.button-primary:focus,button.button-primary:hover,input[type=submit].button-primary:focus,input[type=submit].button-primary:hover,input[type=reset].button-primary:focus,input[type=reset].button-primary:hover,input[type=button].button-primary:focus,input[type=button].button-primary:hover{color:#FFF;background-color:#1EAEDB;border-color:#1EAEDB}input[type=tel],input[type=url],input[type=password],input[type=email],input[type=number],input[type=search],input[type=text],select,textarea{height:38px;padding:6px 10px;background-color:#fff;border:1px solid #D1D1D1;border-radius:4px;box-shadow:none;box-sizing:border-box}input[type=tel],input[type=url],input[type=password],input[type=email],input[type=number],input[type=search],input[type=text],textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none}textarea{min-height:65px;padding-top:6px;padding-bottom:6px}input[type=tel]:focus,input[type=url]:focus,input[type=password]:focus,input[type=email]:focus,input[type=number]:focus,input[type=search]:focus,input[type=text]:focus,select:focus,textarea:focus{border:1px solid #33C3F0;outline:0}label,legend{display:block;margin-bottom:.5rem;font-weight:600}fieldset{padding:0;border-width:0}input[type=checkbox],input[type=radio]{display:inline}label>.label-body{display:inline-block;margin-left:.5rem;font-weight:400}ul{list-style:circle inside}ol{list-style:decimal inside}ol,ul{padding-left:0}ol ol,ol ul,ul ol,ul ul{margin:1.5rem 0 1.5rem 3rem;font-size:90%}.button,button,li{margin-bottom:1rem}code{padding:.2rem .5rem;margin:0 .2rem;font-size:90%;white-space:nowrap;background:#F1F1F1;border:1px solid #E1E1E1;border-radius:4px}pre>code{display:block;padding:1rem 1.5rem;white-space:pre}td,th{padding:12px 15px;text-align:left;border-bottom:1px solid #E1E1E1}td:first-child,th:first-child{padding-left:0}td:last-child,th:last-child{padding-right:0}fieldset,input,select,textarea{margin-bottom:1.5rem}blockquote,dl,figure,form,ol,p,pre,table,ul{margin-bottom:2.5rem}.u-max-full-width{max-width:100%;box-sizing:border-box}.u-pull-right{float:right}.u-pull-left{float:left}hr{margin-top:3rem;margin-bottom:3.5rem;border-width:0;border-top:1px solid #E1E1E1}.container:after,.row:after,.u-cf{content:"";display:table;clear:both}
-
-/* pygment syntax highlighting */
-
-code .hll { background-color: #ffffcc }
-code  { background: #f7f7f7; }
-code .c { color: #888888 } /* Comment */
-code .err { color: #FF0000; background-color: #FFAAAA } /* Error */
-code .k { color: #008800; font-weight: bold } /* Keyword */
-code .o { color: #333333 } /* Operator */
-code .ch { color: #888888 } /* Comment.Hashbang */
-code .cm { color: #888888 } /* Comment.Multiline */
-code .cp { color: #557799 } /* Comment.Preproc */
-code .cpf { color: #888888 } /* Comment.PreprocFile */
-code .c1 { color: #888888 } /* Comment.Single */
-code .cs { color: #cc0000; font-weight: bold } /* Comment.Special */
-code .gd { color: #A00000 } /* Generic.Deleted */
-code .ge { font-style: italic } /* Generic.Emph */
-code .gr { color: #FF0000 } /* Generic.Error */
-code .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-code .gi { color: #00A000 } /* Generic.Inserted */
-code .go { color: #888888 } /* Generic.Output */
-code .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-code .gs { font-weight: bold } /* Generic.Strong */
-code .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-code .gt { color: #0044DD } /* Generic.Traceback */
-code .kc { color: #008800; font-weight: bold } /* Keyword.Constant */
-code .kd { color: #008800; font-weight: bold } /* Keyword.Declaration */
-code .kn { color: #008800; font-weight: bold } /* Keyword.Namespace */
-code .kp { color: #003388; font-weight: bold } /* Keyword.Pseudo */
-code .kr { color: #008800; font-weight: bold } /* Keyword.Reserved */
-code .kt { color: #333399; font-weight: bold } /* Keyword.Type */
-code .m { color: #6600EE; font-weight: bold } /* Literal.Number */
-code .s { color: #00006f } /* Literal.String */
-code .na { color: #0000CC } /* Name.Attribute */
-code .nb { color: #007020 } /* Name.Builtin */
-code .nc { color: #BB0066; font-weight: bold } /* Name.Class */
-code .no { color: #003366; font-weight: bold } /* Name.Constant */
-code .nd { color: #555555; font-weight: bold } /* Name.Decorator */
-code .ni { color: #880000; font-weight: bold } /* Name.Entity */
-code .ne { color: #FF0000; font-weight: bold } /* Name.Exception */
-code .nf { color: #0066BB; font-weight: bold } /* Name.Function */
-code .nl { color: #997700; font-weight: bold } /* Name.Label */
-code .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-code .nt { color: #007700 } /* Name.Tag */
-code .nv { color: #996633 } /* Name.Variable */
-code .ow { color: #000000; font-weight: bold } /* Operator.Word */
-code .w { color: #bbbbbb } /* Text.Whitespace */
-code .mb { color: #6600EE; font-weight: bold } /* Literal.Number.Bin */
-code .mf { color: #6600EE; font-weight: bold } /* Literal.Number.Float */
-code .mh { color: #005588; font-weight: bold } /* Literal.Number.Hex */
-code .mi { color: #0000DD; font-weight: bold } /* Literal.Number.Integer */
-code .mo { color: #4400EE; font-weight: bold } /* Literal.Number.Oct */
-code .sa { background-color: #fff0f0 } /* Literal.String.Affix */
-code .sb { background-color: #fff0f0 } /* Literal.String.Backtick */
-code .sc { color: #0044DD } /* Literal.String.Char */
-code .dl { background-color: #fff0f0 } /* Literal.String.Delimiter */
-code .sd { color: #DD4422 } /* Literal.String.Doc */
-code .s2 { background-color: #fff0f0 } /* Literal.String.Double */
-code .se { color: #666666; font-weight: bold; background-color: #fff0f0 } /* Literal.String.Escape */
-code .sh { background-color: #fff0f0 } /* Literal.String.Heredoc */
-code .si { background-color: #eeeeee } /* Literal.String.Interpol */
-code .sx { color: #DD2200; background-color: #fff0f0 } /* Literal.String.Other */
-code .sr { color: #000000; background-color: #fff0ff } /* Literal.String.Regex */
-code .s1 { background-color: #fff0f0 } /* Literal.String.Single */
-code .ss { color: #AA6600 } /* Literal.String.Symbol */
-code .bp { color: #007020 } /* Name.Builtin.Pseudo */
-code .fm { color: #0066BB; font-weight: bold } /* Name.Function.Magic */
-code .vc { color: #336699 } /* Name.Variable.Class */
-code .vg { color: #dd7700; font-weight: bold } /* Name.Variable.Global */
-code .vi { color: #3333BB } /* Name.Variable.Instance */
-code .vm { color: #996633 } /* Name.Variable.Magic */
-code .il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
-
-/*
- * Custom styles
- */
-
-
-/* Push footer to bottom */
-html, body {
-  height: 100%;
-}
-.whole-container {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-}
-.content-container {
-  flex: 1;
-}
-
-
-/* Patch skeleton defaults to our taste */
-body {
-  font-size: 1.75em;
-}
-blockquote, dl, figure, form, ol, p, pre, table, ul {
-  margin-bottom: 1.5rem;
-}
-.button, button, li {
-  margin-bottom: 0.5rem;
-}
-ol ol, ol ul, ul ol, ul ul {
-  margin: 0.5rem 0 0.5rem 3rem;
-}
-ul {
-  list-style: circle outside;
-  margin-left: 25px;
-}
-ol {
-  list-style: decimal outside;
-  margin-left: 25px;
-}
-
-/*
- * Content
- */
-
-/* Align boardimage in-document pictures */
-img[alt=boardimage] {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-@media (min-width: 750px) {
-  img[alt=boardimage] {
-    float: right;
-  }
-}
-
-.container img {
-  max-width: 100%;
-}
-
-/* Youtube */
-.youtube {
-  height: 0;
-  overflow: hidden;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  position: relative;
-  width: 100%;
-}
-
-.youtube iframe {
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-.center_title {
-  text-align: center;
-}
-
-/* Header and footer styling */
-footer, header {
-  background-color: #2a78bd;
-  color: #fff;
-  padding-bottom: 5px;
-  padding-top: 5px;
-}
-footer {
-  font-size: 60%;
-}
-footer a {
-  color: #fff;
-}
-header {
-  margin-bottom: 0;
-}
-header h1 {
-  margin-bottom: 0;
-}
-header a {
-  text-decoration: none;
-  color: #fff;
-}
-.top-right {
-  font-size: 75%;
-  line-height: 200%;
-}
-/* Slack image */
-.top-right img {
-  margin-right: 3px;
-}
-
-
-/* NAVBAR */
-
-.currentLink {
-  font-weight: 900 !important;
-}
-
-.navbar, .navbar-spacer {
-  background: #fff;
-  border-bottom: 1px solid #eee;
-  border-top: 1px solid #eee;
-  margin-bottom: 10px;
-  display: block;
-  width: 100%;
-  z-index: 99;
-}
-.navbar-spacer {
-  display: none;
-}
-.navbar > .container {
-  width: 100%;
-}
-.navbar-list {
-  list-style: none;
-  margin-bottom: 0;
-}
-.navbar-item {
-  float: left;
-  margin-bottom: 0;
-  position: relative;
-}
-.navbar-link {
-  color: #222;
-  font-size: 11px;
-  font-weight: 600;
-  letter-spacing: .2rem;
-  line-height: 5rem;
-  margin-right: 35px;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-/* Densify links on smaller screen */
-@media (max-width: 799px) {
-  .navbar-link {
-    letter-spacing: 0rem;
-    margin-right: 25px;
-    line-height: 4rem;
-  }
-}
-@media (max-width: 599px) {
-  .navbar-link {
-    margin-right: 15px;
-  }
-}
-@media (max-width: 499px) {
-  .navbar-link {
-    font-size: 9px;
-  }
-}
-@media (max-width: 449px) {
-  .navbar-link {
-    font-size: 8px;
-  }
-}
-.navbar-link.active {
-  color: #33C3F0;
-}
-.has-docked-nav .navbar {
-  left: 0;
-  position: fixed;
-  top: 0;
-}
-.has-docked-nav .navbar-spacer {
-  display: block;
-}
-.has-docked-nav .navbar > .container {
-  width: 80%;
-}
-
-/* Submenus */
-.popover.open {
-  display: block;
-}
-.popover {
-  background: #fff;
-  border-radius: 4px;
-  border: 1px solid #eee;
-  display: none;
-  left: -25px;
-  position: absolute;
-  top: 92%;
-  white-space: nowrap;
-  z-index: 99;
-  -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-  -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-  filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
-}
-.popover-item:first-child .popover-link:after, .popover-item:first-child .popover-link:before {
-  border: solid transparent;
-  bottom: 100%;
-  content: " ";
-  height: 0;
-  left: 50%;
-  pointer-events: none;
-  position: absolute;
-  width: 0;
-}
-.popover-item:first-child .popover-link:after {
-  border-color: rgba(255, 255, 255, 0);
-  border-bottom-color: #fff;
-  border-width: 10px;
-  margin-left: -10px;
-}
-.popover-item:first-child .popover-link:before {
-  border-color: rgba(238, 238, 238, 0);
-  border-bottom-color: #eee;
-  border-width: 11px;
-  margin-left: -11px;
-}
-.popover-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.popover-item {
-  margin: 0;
-  padding: 0;
-}
-.popover-link {
-  border-bottom: 1px solid #eee;
-  color: #222;
-  display: block;
-  font-size: 1.0rem;
-  font-weight: 600;
-  letter-spacing: .1rem;
-  padding: 8px 20px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.popover-item:first-child .popover-link {
-  border-radius: 4px 4px 0 0;
-}
-.popover-item:last-child .popover-link {
-  border-radius: 0 0 4px 4px;
-  border-bottom-width: 0;
-}
-.popover-link:hover {
-  color: #fff;
-  background: #33C3F0;
-}
-.popover-link:hover, .popover-item:first-child .popover-link:hover:after {
-  border-bottom-color: #33C3F0;
-}
+{{ partial "style/normalize.css" . | safeCSS }}
+{{ partial "style/skeleton.css" . | safeCSS }}
+{{ partial "style/pygment.css" . | safeCSS }}
+{{ partial "style/site.css" . | safeCSS }}
 </style>
