Switch from gitter back to slace, improve margin; fix root page
According to
https://gohugo.io/templates/homepage/#homepage-template-lookup-order
the right thing to do is to add /layouts/index.html. It is a copy of
_default/single.html.

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -109,6 +109,7 @@ header a {
   color: #fff;
 }
 .top-right {
+  margin-top: 1rem;
   font-size: 75%;
   line-height: 200%;
 }
@@ -116,7 +117,9 @@ header a {
 .top-right img {
   margin-right: 3px;
 }
-
+.nobreak {
+  white-space: nowrap;
+}
 
 /* NAVBAR */
 
