--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -6,18 +6,22 @@
       <div>{{ .Description }}</div>
     </div>
     <div class="four columns top-right">
+      {{/*
       <a href="https://groups.google.com/forum/#!forum/periph-users">Mailing list</a>
       <br>
-      <!--
+      */}}
       <a href="https://gophers.slack.com/messages/periph/">
-        <img src="/img/slack.png" width=16 height=16>Slack</a>
+        Chat on
+        <img src="/img/slack.png" width=16 height=16>Slack
+      </a>
         —
-      <a href="https://invite.slack.golangbridge.org/">Get invite</a>
+      <a class="nobreak" href="https://invite.slack.golangbridge.org/">Get invite</a>
       <br>
-      -->
+      {{/*
       <a href="https://gitter.im/periph-io/Lobby"><img
          src="/img/gitter.png" alt="chat on gitter"></a>
       <br>
+      */}}
       <iframe src="https://ghbtns.com/github-btn.html?user=google&repo=periph&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
     </div>
   </div>
