Add news section and v2.0.0 post.

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -10,8 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            {{/* Will add later on the right <div id="toc">{{ .TableOfContents
-              }}</div> */}}
+            {{/* TODO(maruel): Add on right side? <div id="toc">{{.TableOfContents}}</div> */}}
             {{- .Content -}}
           </div>
         </div>
