Remove link underline everywhere
It's cleaner.

Reduce horizontal padding from 20px to 5px on width <400px

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -38,6 +38,13 @@ ol {
   list-style: decimal outside;
   margin-left: 25px;
 }
+a {
+  text-decoration: none;
+}
+/* On <400px display, pad horizontally much less than skeleton default*/
+.container {
+  padding: 0 5px;
+}
 
 /*
  * Content
