Fix incorrect container for <nav> and height calculation

--- a/site/layouts/partials/html_head_script.html
+++ b/site/layouts/partials/html_head_script.html
@@ -43,7 +43,7 @@
   var navOffsetTop;
 
   function onDOMContentLoaded() {
-    navbar = document.getElementsByClassName('navbar')[0];
+    navbar = document.getElementsByTagName('header')[0];
     navOffsetTop = navbar.offsetHeight;
   }
   if (document.readyState === 'complete' || document.readyState === 'loaded' || document.readyState === 'interactive') {
