Densify navbar slightly more on narrow display

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -178,6 +178,7 @@ header a {
 @media (max-width: 454px) {
   .navbar-link {
     font-size: 10px;
+    letter-spacing: .1rem;
   }
 }
 .navbar-link.active {
