Make platforms a dropdown menu like Devices; tweak root
- Add Platforms drop down menu
- Improve root list of devices
- The long popupover menus are hard to navigate on mobile, this will have to be
  worked on in a follow up but it's still useful for now.
- Move the popup top arrow left.

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -225,13 +225,13 @@ header a {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: #fff;
   border-width: 10px;
-  margin-left: -10px;
+  margin-left: -36%;
 }
 .popover-item:first-child .popover-link:before {
   border-color: rgba(238, 238, 238, 0);
   border-bottom-color: #eee;
   border-width: 11px;
-  margin-left: -11px;
+  margin-left: -35%;
 }
 .popover-list {
   list-style: none;
